--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ section{
     display: flex;
     align-items: center;
     padding: 0.9%;
-    background:url('krutik.png')no-repeat;
+    background:url('Krutik.png')no-repeat;
     background-size: 50%;
     background-position: right;
 
